# super-impress

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pnpm-lock.yaml  setup.sh
.github/: labeler.yml
.github/workflows/: backend-format.yml  formatting.yml  frontend-format.yml  labeler.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  database.py  dependencies.py  main.py  oauth.py
backend/app/auth/: config.py  models.py  router.py  schemas.py  service.py  test_password_validation.py  validators.py
backend/app/models/: auth.py  post.py  token.py  user.py
backend/app/routers/: auth.py  post.py
backend/migrations/: env.py
backend/migrations/versions/: 4c983bd84da0_initial_migration.py  ee3dec5a0673_initial_migration.py
decisions/product/: 1-why.md  2-what.md  3-how.md  4-mvp.md  5-authentication.md
decisions/tech/: 1-svelte.md  2-docker.md  3-uv.md  4-pnpm.md  5-postgresql.md  6-authentication.md
frontend/: .dockerignore  .prettierignore  Dockerfile  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/e2e/: auth.test.ts  login.test.ts  register.test.ts
frontend/src/lib/: api.ts
frontend/src/lib/components/: Input.svelte  button.svelte  form-field.svelte
frontend/src/lib/layouts/: auth-layout.svelte
frontend/src/lib/stores/: auth-store.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/(auth)/: +layout.svelte
(+15 files in other folders)
